syntax = "proto3";

package com.road.yishi.proto.campaign;

message HangupStateListMsg {
  int32 maxCount = 1;
  repeated int32 hangupState = 2;
}
